# couchbase-sizer-helper

./: .bumpversion.cfg  .gitignore  Makefile  README.md  pyproject.toml  setup.py  setup.sh
cbsizerhelper/: __init__.py  create_import.py
cbsizerhelper/lib/: constants.py  logging.py  sizing.py
lib/: args.py  exceptions.py  logging.py  sizing.py
tests/: common.py  sample_data.json  test_1.py
